# ai-video-generator

ai-video-pipeline/: README.md  image_fetcher.py  main.py  pyproject.toml  requirements.txt  script_generator.py  seo_generator.py  thumbnail_generator.py  video_creator.py  voice_generator.py  whisper_subtitles.py
ai-video-pipeline/output/: seo.txt  subtitles.srt
